--- a/package.json
+++ b/package.json
@@ -20,5 +20,14 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
-  }
+  },
+  "description": "cardapio_app_web feito com nextjs",
+  "keywords": [
+    "nextjs",
+    "typescript",
+    "javascript",
+    "nodejs"
+  ],
+  "author": "Otavio Henrique",
+  "license": "ISC"
 }
